common fixes/z-index/scroll

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -257,7 +257,7 @@ button {
   height: 23px;
   padding-top: 8px;
   cursor: pointer;
-  z-index: 30;
+  z-index: 9999;
 
   .notifications-badge {
     position: absolute;
@@ -958,7 +958,7 @@ ul {
     padding-right: 39px;
     padding-left: 24px;
 
-    overflow: scroll;
+    overflow-y: auto;
   }
   .logo {
     margin-bottom: 30px;
@@ -987,7 +987,7 @@ ul {
 
   &.opened {
     //visibility: visible;
-    z-index: 20;
+    z-index: 1000;
     //transition: all .4s ease-in;
     opacity: 1;
   }
@@ -2662,6 +2662,7 @@ h1 {
       border-radius: 50%;
       background-color: $warm-grey-two;
       z-index: 999;
+      cursor: pointer;
 
       img {
         max-width: 40px;
@@ -2671,7 +2672,8 @@ h1 {
     &__inner {
       position: fixed;
       max-height: 606px;
-      overflow-y: scroll;
+      width: calc(100% - 32px);
+      overflow-y: auto;
       padding: 0 16px;
       padding-bottom: 5px;
       margin: 0 16px;
@@ -2683,6 +2685,7 @@ h1 {
       transform: translateY(100%);
       transition: $transition;
       opacity: 0;
+      box-sizing: border-box;
 
       &.open {
         transform: translateY(-24px);
